[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splurge-base58"
version = "2025.1.0"
description = "Splurge Base58 Helper"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jim Schilling"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/jim-schilling/splurge-base58"
Documentation = "https://github.com/jim-schilling/splurge-base58#readme"
Repository = "https://github.com/jim-schilling/splurge-base58.git"
Issues = "https://github.com/jim-schilling/splurge-base58/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[project.scripts]
splurge-base58 = "splurge_base58.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splurge_base58*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.py"]

[tool.pytest.ini_options]
addopts = [
    "--cov=splurge_base58",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
    "-x",
    "-v",
    "-n",
    "4",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["splurge_base58"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
